# modernposix

./: .gitignore  CMakeLists.txt  Example.cpp  Mpopen.hpp  Popen.hpp  README.md  SConstruct  TestMpopen.cpp  sconstruct
.github/workflows/: cmake.yml
docker/: Dockerfile-debian12  Dockerfile-redhat8  Dockerfile-ubuntu22  docker-mp
examples/: dstream.cpp  dynamiclib.cpp  mutex.cpp  pstream.cpp  workdir.cpp
include/: config.hpp  dstream.hpp  dynamiclib.hpp  modernposix.hpp  mutex.hpp  pstream.hpp  workdir.hpp
include/modernposix/: dl_last_error.hpp  dstream.hpp  dynamiclib.hpp  last_error.hpp  modernposix.hpp  pstream.hpp  workdir.hpp
sample/: dstream.cpp  dynamiclib.cpp  ipstream.cpp  opstream.cpp  workdir.cpp
test/: autogen_dir.cpp  autogen_dir.hpp  dl_last_error.cpp  dstream.cpp  dynamiclib.cpp  last_error.cpp  pstream.cpp  test.cpp  workdir.cpp
unittests/: dstream.cpp  dynamiclib.cpp  main  mutex.cpp  pstream.cpp  utils.hpp  workdir.cpp
utils/lib/c/: lib.c  lib.h
utils/lib/cpp/: lib.cpp  lib.hpp
utils/testlibc/: testlib.c  testlib.h
utils/testlibcpp/: testlib.cpp  testlib.hpp
